fixed image layout on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -110,7 +110,6 @@ a {
 @media screen and (max-width: 950px){
     body{
         flex-wrap: nowrap;
-        width: 100%;
         padding-left: 10%;
         padding-right: 10%;
        
@@ -120,8 +119,7 @@ a {
     .wrapper{
       display: inline-block;
       padding-right: auto;
-
-
+      width: 100%;
     }
     .left{
         margin-right: 0px;
@@ -134,6 +132,9 @@ a {
         size: 100%;
     }
 
+    .footer{
+        width: 100%;
+    }
     
 }
 
